2013-01-10  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* po/fi.po: Update from Translation Project.

2013-01-09  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* src/util.c: Do not treat : as a device path delimiter, thus now
	  supporting path with colon in them, like
	  /dev/serial/by-path/.... Debian 697624

2012-12-21  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* po/nb.po: Update from TP.

2012-12-20  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* po/ja.po: Update from TP.

2012-12-10  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* po/vi.po: Update from TP.

2012-12-09  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* po/de.po: Update from TP.

2012-12-08  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* po/pl.po: Update from TP.

	* configure.in: Increase version to 2.6.1.90

2012-11-21  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* src/minicom.c: Print creation date of serial device file if < 20 hrs

2012-09-02  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* man/minicom.1: Fix date and version.

	* src/config.c, src/configsym.h, src/main.c, src/minicom.c,
	  src/minicom.h, src/rwconf.c, man/minicom.1: Add option to output as
	  hex, initial patch by Jiao ShuYing, #313754

2012-07-27  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* po/nb.po: Update from translation team.

2012-07-22  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* src/config.c, src/configsym.h, src/minicom.c, src/rwconf.c: Add
	  line-wrap config-file option, by Riku Meskanen


2012-03-17  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* src/minicom.c: Add -R command line option to help screen.

2012-02-11  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* configure.in: Set version to 2.6.1.

	* src/main.c, src/minicom.c: iconv: Handle the case that iconv
	  did not convert anything. Reported by Mike Crowe, Debian #659351.

	* src/ipc.c: Formatting cleanup.

2012-01-14  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>
